# AiWattCoach

./: .dockerignore  .env.example  .gitignore  .graphifyignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.logging.yml  docker-compose.yml  package-lock.json  package.json  pup.ron  reviewers.md  skills-lock.json
.github/workflows/: ci.yml  deploy-coolify-manual.yml  release-manual.yml
.husky/: pre-commit  pre-push
.opencode/plans/: 2026-03-30-workout-summary-backend.md
docker/: app-entrypoint.sh  loki-config.yaml  tempo-config.yaml
docker/alloy/: config.alloy
docs/: calendar-entry-integrity-issues.md  logging.md
docs/architecture/: completed-workout-dedup-and-rendering.md  external-sync-and-calendar-flow.md  llm-coach-reply-state-machine.md  overview.md  planned-completed-link-match-sources.md
docs/plans/: 2026-03-20-backend-setup-design.md  2026-03-20-backend-setup.md  2026-03-20-docker-ci-coolify-design.md  2026-03-20-docker-ci-coolify.md  2026-03-20-react-shell-design.md  2026-03-20-react-shell.md  2026-03-21-google-auth-rbac-design.md  2026-03-21-google-auth-rbac.md  2026-03-23-intervals-settings-test-button.md  2026-03-24-pr45-late-review-followups.md  2026-03-29-calendar-mini-chart-colors-design.md  2026-03-29-calendar-mini-chart-colors.md  2026-03-29-completed-workout-enrichment-design.md  2026-03-29-completed-workout-enrichment.md  2026-03-29-workout-details-handoff.md  2026-03-29-workout-fit-download-design.md  2026-03-29-workout-fit-download.md  2026-03-29-workout-review-fixes-design.md  2026-03-29-workout-review-fixes.md  2026-03-30-workout-detail-auto-scroll-removal-design.md  2026-03-30-workout-detail-auto-scroll-removal.md  2026-04-01-llm-phase-2.md  2026-04-02-durable-coach-reply-finalization-followup.md  2026-04-02-durable-coach-reply-finalization.md  2026-04-02-health-check-log-noise-design.md  2026-04-02-health-check-log-noise.md  2026-04-02-model-suggestion-refresh-design.md  2026-04-02-model-suggestion-refresh.md  2026-04-02-mongo-log-noise-design.md  2026-04-02-mongo-log-noise.md  2026-04-02-openrouter-logging-design.md  2026-04-02-openrouter-logging.md  2026-04-02-provider-logging-rollout-design.md  2026-04-02-provider-logging-rollout.md  2026-04-03-athlete-summary-feature-plan.md  2026-04-03-openrouter-prompt-caching-plan.md  2026-04-03-websocket-disconnect-queue-handling.md  2026-04-03-workout-summary-full-request-logging-design.md  2026-04-04-athlete-summary-durable-generation-implementation-plan.md  2026-04-04-power-compression-llm-design.md  (+22 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  i18n.ts  main.tsx  styles.css
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunks.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/wiki/: Activities_Activity_Detail_Richness.md  Activities_Create_Activity_Rejects_Invalid_Base64.md  Activities_Delete_Activity_Removes_Local_Copy.md  Activities_Tests_Activity_Document_Bson_Round.md  (+460 more)
scripts/: rebuild_graphify.sh  verify_arch.sh
src/: lib.rs  main.rs  main_support.rs  main_tests.rs  telemetry.rs
tasks/: lessons.md
tests/: athlete_summary_service.rs  auth_rest.rs  calendar_entry_views_mongo.rs  canonical_roots_mongo.rs  dashboard_rest.rs  external_sync_mongo.rs  health_check.rs  identity_domain.rs  identity_service.rs  intervals_adapters.rs  intervals_pest_parser_poc.rs  intervals_planned_workout.rs  intervals_rest.rs  intervals_service.rs  intervals_workout_analysis.rs  llm_adapters.rs  logs_rest.rs  races_mongo.rs  settings.rs  settings_rest.rs  telemetry_setup.rs  training_load_mongo.rs  training_plan_mongo.rs  workout_summary_mongo.rs
(+623 files in other folders)
