[package]
name = "aiwattcoach"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = true }
dotenvy = "0.15.7"
fitparser = "0.10"
futures = "0.3"
mongodb = "3.2.4"
opentelemetry = "0.28"
opentelemetry-appender-tracing = { version = "0.28.1", features = ["experimental_use_tracing_span_context"] }
opentelemetry-http = "0.28"
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["grpc-tonic", "logs", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["logs", "rt-tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.28", features = ["logs", "rt-tokio", "testing"] }
tokio-tungstenite = "0.28"

[lints.rust]
unused_lifetimes = "deny"

[lints.clippy]
needless_lifetimes = "deny"
redundant_clone = "warn"
needless_borrow = "warn"
needless_borrows_for_generic_args = "warn"
ptr_arg = "warn"
